--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@storybook/manager-webpack5": "^6.3.12",
     "@storybook/react": "^6.3.6",
     "@svgr/webpack": "^5.5.0",
+    "@types/redux-form": "^8.3.0",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.0.0",
     "babel-plugin-lodash": "^3.3.4",
