--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Component library for building Stripes applications.",
   "license": "Apache-2.0",
   "repository": "folio-org/stripes-components",
-  "types": "index.d.ts",
   "sideEffects": [
     "*.css"
   ],
@@ -83,6 +82,7 @@
     "postcss-syntax": "^0.34.0",
     "postcss-url": "^10.1.3",
     "react": "^17.0.2",
+    "react-docgen-typescript": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-intl": "^5.8.0",
     "react-redux": "^7.2.0",
@@ -99,6 +99,7 @@
     "stylelint": "^9.5.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-junit-formatter": "^0.2.1",
+    "typedoc": "^0.23.11",
     "utility-types": "^3.10.0",
     "webpack": "~5.68.0"
   },
