--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    // never assume any
-    "noImplicitAny": true,
+    // allow assuming any
+    "noImplicitAny": false,
     // allow importing things like React
     "esModuleInterop": true,
     // JSX is react-flavored
@@ -9,6 +9,6 @@
     // module resolution strategies
     "lib": ["esnext"],
     "module": "es6",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
   }
 }
